nodejs-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-express-service
spec:
  selector:
    app: nodejs-express
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
